--- a/style.css
+++ b/style.css
@@ -61,15 +61,27 @@ body {
     font-family: inherit;
     font-size: 20px;
     text-transform: capitalize;
+    position: relative;
 }
 
-.nav__link:hover {
-    text-decoration: underline;
+.nav__link::after {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 0%;
+    border: 0 solid white;
+    transition: .3s;
+}
+
+.nav__link:hover::after {
+    border: 1px solid white;
+    width: 100%;
 }
 
 .header__menu {
     position: absolute;
-    top: 30px;
+    top: 0px;
     right: 30px;
     width: 40px;
     height: 34px;
@@ -133,6 +145,11 @@ body {
     position: relative;
     z-index: 0;
     border-radius: 16px; 
+    transition: .2s;
+}
+
+.gallery__card:hover {
+    transform: scale(1.04);
 }
 
 .gallery__photo {
